--- a/video.html
+++ b/video.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
  <title>Video</title>
 </head>
 <body>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/5S70pF8TyDU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/5S70pF8TyDU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </body>
 </html>
