--- a/success.html
+++ b/success.html
@@ -3,6 +3,6 @@
  <title>Thank you!</title>
 </head>
 <body>
-<center><h1>Дякую, за ваше повідомлення!</h1></center>
+<center><h1>Р”СЏРєСѓСЋ, Р·Р° РІР°С€Рµ РїРѕРІС–РґРѕРјР»РµРЅРЅСЏ!</h1></center>
 </body>
 </html>
